# LumeHaven

./: .gitignore  Dockerfile  README.md  config.yaml.example  config.yml  docker-compose.yml  pyproject.toml
docs/: README.md
docs/wiki/: README.md  api-reference.md  configuration.md  events-and-effects.md  integrations.md  quick-start.md  scenes.md  setup-guide.md  troubleshooting.md
ghs/: application.properties
src/core/: GameService.py  app.py  config.py  effects.py  event_conditions.py  events.py  game_service.py  lamp_service.py  scenes.py
src/core/api/: lamps_api.py  scenes_api.py  status_api.py
src/core/test/: config_test.py  effects_test.py  event_conditions_test.py  events_test.py  game_service_test.py  lamp_service_test.py  utils.py
src/ghs/: client.py  model.py
src/ghs/test/: test_game_state_fetcher.py  test_read_model.py
src/homeassistant/: lamps.py
src/lamp_integrations/: logging_lamp.py  yeelight.py
src/lights/: lamps.py
src/lights/test/: lamps_test.py
src/lumehaven/: __init__.py  __main__.py
src/lumehaven/core/: app.py  config.py  event_conditions.py  events.py  game_service.py  lamp_service.py  scenes.py
src/lumehaven/ghs/: client.py
src/lumehaven/lights/: lamps.py
src/server/: GameService.py  __init__.py  app.py  config.py
src/server/test/: config_test.py
tests/core/: config_test.py  event_conditions_test.py  events_test.py  game_service_test.py  lamp_service_test.py  utils.py
tests/ghs/: test_game_state_fetcher.py  test_read_model.py
tests/lamp_integrations/: yeelight_test.py
tests/lights/: lamps_test.py
(+10 files in other folders)
