[project]
name = "lumehaven"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "flask>=3.1.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "yeelight>=0.7.16",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
    "mypy>=1.11",
]
