[project]
name = "lumehaven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jan Hendrik Haanstra" }
]
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "flask>=3.1.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "yeelight>=0.7.16",
]

[project.scripts]
lumehaven = "lumehaven:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.6"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
